--- a/styles/imports/custom.css
+++ b/styles/imports/custom.css
@@ -21,7 +21,7 @@ a {
   padding-bottom: 33.25%;
 }
 
-.glyphicon {
+&:not(.daterangepicker_input) .glyphicon {
   padding: 20px;
 }
 
@@ -67,6 +67,12 @@ a {
 .modal.in {
   height: auto;
   visibility: visible;
+}
+
+select.form-control {
+  width: auto;
+  display: inline-block;
+  /*float: none;*/
 }
 
 /*Extra small devices (mobile phones, 767px and below)*/
