--- a/styles/main.css
+++ b/styles/main.css
@@ -2,6 +2,7 @@
 @import '../bower_components/bootstrap/dist/css/bootstrap.css';
 @import '../bower_components/slick-carousel/slick/slick.css';
 @import '../bower_components/slick-carousel/slick/slick-theme.css';
+@import '../bower_components/bootstrap-daterangepicker/daterangepicker.css';
 /* endbower */
 
 @import 'imports/spinner.css';
@@ -13,6 +14,7 @@
 @import 'imports/about-contact.css';
 @import 'imports/itinerary.css';
 @import 'imports/call-to-action.css';
+@import 'imports/book-now-modal.css';
 @import 'imports/reviews.css';
 @import 'imports/info-map.css';
 @import 'imports/pro-gallery.css';
