Making changes as per 1.3 sprint including GFMV-45 and GFMV-44.

--- a/styles/imports/itinerary.css
+++ b/styles/imports/itinerary.css
@@ -1,19 +1,42 @@
-#itinerary-modal .modal-content {
-  padding: 5%;
+#itinerary {
+  position: relative;
+  font-size: 1.3em;
+}
+
+#itinerary a:hover,
+#itinerary a:focus,
+#itinerary a:active {
+  text-decoration: none;
+}
+
+#itinerary a {
+  cursor: pointer;
+}
+
+#itinerary p.no-indent {
+  text-indent: 0;
+}
+
+#itinerary .btn {
+  font-family: "Ubuntu";
+  text-indent: 0;
+}
+
+#itinerary .col-xs-12 {
   background-color: #f8f6e8;
-  font-size: 1.25em;
-  font-weight: 300;
+  border-radius: 5px;
+  margin: 15px;
+  padding: 30px;
 }
 
-#itinerary-modal .modal-content #close-modal {
-  color: #333;
-  font-size: 1em;
+@media screen and (max-width: 768px) {
+  #itinerary .col-xs-12 {
+    margin: 0;
+  }
 }
 
-#itinerary-modal .modal-content strong {
-  font-weight: 400;
-}
-
-#itinerary-modal .modal-content a {
-  color: #73a8bf;
+@media screen and (max-width: 991px) {
+  #itinerary {
+    font-size: .9em;
+  }
 }
