Adding Instagram posts as per GFMV-54.

--- a/styles/main.css
+++ b/styles/main.css
@@ -18,7 +18,8 @@
 @import 'imports/reviews.css';
 @import 'imports/info-map.css';
 @import 'imports/pro-gallery.css';
-@import 'imports/facebook-posts.css';
+/*@import 'imports/facebook-posts.css';*/
+@import 'imports/instagram-posts.css';
 @import 'imports/footer.css';
 @import 'imports/scroll-up.css';
 
