--- a/styles/imports/custom.css
+++ b/styles/imports/custom.css
@@ -75,6 +75,11 @@ select.form-control {
   /*float: none;*/
 }
 
+#CDSWIDSSP {
+  margin-right: auto !important;
+  margin-left: auto !important;
+}
+
 /*Extra small devices (mobile phones, 767px and below)*/
 @media screen and (max-width: 767px) {
   .background-image {
