--- a/styles/imports/navbar.css
+++ b/styles/imports/navbar.css
@@ -92,6 +92,17 @@ ul.navbar-nav{
   height: auto;
 }
 
+.navbar-default .navbar-nav > li.dropdown.open a {
+  background-color: transparent;
+  text-align: center;
+}
+
+.navbar-default .navbar-nav > li.dropdown ul.dropdown-menu > li a {
+  font-size: 1.75em;
+  margin-bottom: 0.25em;
+  color: #394a59;
+}
+
 /*Small devices (landscape phones, 767px and up)*/
 @media screen and (max-width: 767px) {
   .nav>li {
@@ -143,11 +154,19 @@ ul.navbar-nav{
   .navbar-brand img {
     max-height: 5em;
   }
+
+  .navbar-default .navbar-nav > li.dropdown ul.dropdown-menu {
+    background-color: #3B5663;
+  }
+
+  .navbar-default .navbar-nav > li.dropdown ul.dropdown-menu > li a {
+    color: white;
+    font-size: 1.25em;
+  }
 }
 
 /*Large devices (desktops, 1200px and up)*/
 @media (min-width: 1200px) {
-  /* TODO remove if unnecessary */
 }
 
 @media screen and (max-width: 1999px){
