--- a/styles/imports/book-now-modal.css
+++ b/styles/imports/book-now-modal.css
@@ -4,6 +4,12 @@
   font-size: 1.25em;
 }
 
+#book-now-modal .modal-content .close {
+  margin-top: -5%;
+  font-size: 1.5em;
+  opacity: 0.5;
+}
+
 #book-now-modal input,
 #book-now-modal select {
   background-color: #f9f7ec;
