Adding Our Favorites page, its assets and styles, fixing display of mobile menu (About section was drawing over it), and updating Itinerary page

--- a/styles/imports/navbar.css
+++ b/styles/imports/navbar.css
@@ -3,6 +3,7 @@
   background: transparent;
   width: 100%;
   border: none;
+  z-index: 100;
 }
 
 .navbar-default .navbar-nav > li > a {
@@ -10,6 +11,7 @@
   font-size: 30px;
   font-weight: 400;
   font-variant: small-caps;
+  padding: 15px 10px;
 }
 
 .navbar-default .navbar-nav>.active>a, 
@@ -38,7 +40,7 @@
   background: transparent;
 }
 
-.navbar-default .navbar-nav>.active>a {
+.navbar-default .navbar-nav > .active > a {
   background-color: none;
 }
 
@@ -55,14 +57,16 @@
 .navbar-default .navbar-toggle .icon-word{
   color: #425669;
 }
+
 ul.navbar-nav{
   letter-spacing: 2px;
-  margin: 40px auto;
+  margin: 40px -10px 40px 40px;
 }
 
 .navbar-brand {
-  padding: 15px, 15px;
+  padding: 15px 15px;
   position: absolute;
+  left: -7rem;
 }
 
 .nav{
@@ -109,9 +113,27 @@ ul.navbar-nav{
     position: static;
   }
 
+  .navbar-default {
+    left: 0;
+    right: 0;
+  }
+
+  .navbar-default .navbar-nav:not(.navbar-right)>li:not(:last-child):after {
+    position: relative;
+    transform: rotate(90deg);
+  }
+
+  ul.navbar-nav {
+    margin: 40px auto;
+  }
+
   .navbar-default .navbar-collapse {
     border-color: transparent;
     background-color: rgba(252, 248, 227, 0.8);
+  }
+
+  .navbar-brand {
+    left: 0;
   }
 
   .navbar-brand img {
@@ -139,7 +161,7 @@ ul.navbar-nav{
 /*Small devices (landscape phones, 768px and up)*/
 @media (min-width: 768px) and (max-width: 991px) {
   .navbar-default .navbar-nav > li > a {
-    font-size: 20px;
+    font-size: 16px;
   } 
   .navbar-brand img {
     max-height: 5em;
@@ -148,9 +170,10 @@ ul.navbar-nav{
 
 /*Medium devices (tablets, netbooks, 992px and up)*/
 @media (min-width: 992px) and (max-width: 1199px) {
-  .navbar-default .navbar-nav>li>a {
+  .navbar-default .navbar-nav > li > a {
     font-size: 20px;
-  } 
+  }
+  
   .navbar-brand img {
     max-height: 5em;
   }
@@ -158,6 +181,9 @@ ul.navbar-nav{
 
 /*Large devices (desktops, 1200px and up)*/
 @media (min-width: 1200px) {
+  .navbar-default .navbar-nav > li > a {
+    font-size: 20px;
+  }
 }
 
 @media screen and (max-width: 1999px){
