--- a/styles/main.css
+++ b/styles/main.css
@@ -22,5 +22,6 @@
 @import 'imports/instagram-posts.css';
 @import 'imports/footer.css';
 @import 'imports/scroll-up.css';
+@import 'imports/favorites.css';
 
 @import 'imports/privacy-policy.css';
